--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,10 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-16x16.png">
 	<link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
 	<link rel="mask-icon" href="%PUBLIC_URL%/favicon/safari-pinned-tab.svg" color="#2f54eb">
-	<meta name="msapplication-TileColor" content="#ff0000">
+	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon/favicon.ico">
+	<meta name="msapplication-TileColor" content="#fa8c16">
 	<meta name="msapplication-TileImage" content="%PUBLIC_URL%/favicon/mstile-144x144.png">
+	<meta name="msapplication-config" content="%PUBLIC_URL%/browserconfig.xml">
 	<meta name="theme-color" content="#ffffff">
 
 	<!--
